fix spacing on active bt items

--- a/style.css
+++ b/style.css
@@ -716,7 +716,7 @@ box.logout-background .logout-menu button label {
   border-radius: 5rem;
   padding: 0.4rem;
   border-radius: calc(16px - 0.4rem - 2px);
-  margin: 0.25rem 0.4rem 0.4rem 0.4rem;
+  margin: 0.25rem 0.4rem 0.4rem 0.75rem;
   padding: 0.75rem;
 }
 .network-item-connected:hover {
